Adding imageiO Support and modify structure of the project for easier maintaining